cabal-version:      2.4
name:               hangman
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             JAD3N
maintainer:         me@jaden.bio

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hangman
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.0.0,
        ansi-terminal ^>=0.11
    hs-source-dirs:   app
    default-language: Haskell2010
